# VizMotive-Filament

./: CMakeLists.txt  build.sh
HighlevelAPIs/: VizMotive_Filament.sln
HighlevelAPIs/API_SOURCE/: API_SOURCE.vcxitems  API_SOURCE.vcxitems.filters  FIncludes.h  PreDefs.h  VizComponentAPIs.cpp  VizComponentAPIs.h  VizCoreUtils.cpp  VizCoreUtils.h  VizEngineAPIs.cpp  VizEngineAPIs.h  VzComponents.h  VzEngineApp.cpp  VzEngineApp.h  VzJniOnload.cpp  VzJniOnload.h  VzRenderPath.cpp  VzRenderPath.h
HighlevelAPIs/API_SOURCE/backend/: VzAnimationComponents.h  VzAnimator.cpp  VzAnimator.h  VzAnimatorImpl.cpp  VzAnimatorImpl.h  VzAssetExporter.cpp  VzAssetLoader.cpp  VzAssetLoader.h  VzConfig.h  VzCube.cpp  VzCube.h  VzIBL.cpp  VzIBL.h  VzMeshAssimp.cpp  resource_internal.h
HighlevelAPIs/API_SOURCE/components/: VzActor.cpp  VzActor.h  VzAnimation.cpp  VzAnimation.h  VzAnimator.cpp  VzAnimator.h  VzAsset.cpp  VzAsset.h  VzCamera.cpp  VzCamera.h  VzCompositor.cpp  VzCompositor.h  VzFont.cpp  VzFont.h  VzGeometry.cpp  VzGeometry.h  VzLight.cpp  VzLight.h  VzMI.cpp  VzMI.h  VzMaterial.cpp  VzMaterial.h  VzRenderer.cpp  VzRenderer.h  VzScene.cpp  VzScene.h  VzSkeleton.cpp  VzSkeleton.h  VzTexture.cpp  VzTexture.h
HighlevelAPIs/API_SOURCE/mat/: compositor.filamat  compositor.mat
HighlevelAPIs/Samples/ImGui_Sample01/: sample01.cpp  savefile[09-46-35].json  savefileio.cpp  savefileio.h
HighlevelAPIs/Samples/ImGui_Sample02/: sample02.cpp
HighlevelAPIs/Samples/ImGui_Sample03/: sample03.cpp
HighlevelAPIs/Samples/ImGui_Sample04/: sample04.cpp
HighlevelAPIs/Samples/ImGui_Sample05/: CMakeLists.txt  CMakeLists_forandroid.txt  ImGui_Sample05.vcxproj  build.sh  main_content.cpp  main_content.h  sample05.cpp
HighlevelAPIs/VizAPIs_Android/: CMakeLists.txt  build.sh
HighlevelAPIs/VizAPIs_Linux/: CMakeLists.txt  build.sh
HighlevelAPIs/VizAPIs_Windows/: VizAPIs_Windows.vcxproj  VizAPIs_Windows.vcxproj.filters  compile-resources.bat
filament/backend/src/vulkan/platform/: VulkanPlatform.cpp  VulkanPlatformSwapChainImpl.cpp
libs/camutils/src/: FreeFlightManipulator.h
libs/gltfio/: CMakeLists.txt
libs/gltfio/src/: JitShaderProvider.cpp
samples/: gltf_viewer.cpp
